--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,10 @@ jobs:
         run: mvn test
 
     # Étape 6 - Build des artefacts
-    # Pour désactiver les tests de performances pour gagner du temps, remplacez "mvn package" par
-    # mvn package -DskipTests
+    # Ici, on skip les tests car ils sont déjà exécuté dans la commande précédente mvn test
+    # Pour réactiver les tests de performances, enlever -DskipTests
       - name: Package the project
-        run: mvn package
+        run: mvn package -DskipTests
 
     # Étape 7 - Stocker l'artefact JAR/WAR pour téléchargement
       - name: Upload build artifact
